tests/niminaction/Chapter2/no_iterator.nim
discard """
  line: 6
  errormsg: "type mismatch"
"""

for i in 5:
  echo i